--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@blocknote/react": "^0.46.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@prisma/client": "^7.3.0",
+    "mysql2": "^3.16.3",
     "next": "16.1.6",
     "next-auth": "5.0.0-beta.30",
+    "prisma": "^7.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
