--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@blocknote/core": "^0.46.2",
@@ -18,6 +19,7 @@
     "mysql2": "^3.16.3",
     "next": "16.1.6",
     "next-auth": "5.0.0-beta.30",
+    "next-sitemap": "^4.2.3",
     "prisma": "^7.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
