--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@blocknote/react": "^0.46.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@fullpage/react-fullpage": "^0.1.49",
     "@prisma/client": "^7.3.0",
+    "fullpage.js": "^4.0.40",
     "mysql2": "^3.16.3",
     "next": "16.1.6",
     "next-auth": "5.0.0-beta.30",
